# api-tech-race

./: .gitignore  README.md  docker-compose.yml
db/init/: 01-schema.sql  02-seed.sql
front/: Dockerfile  index.html
orchestrator/: Dockerfile  package.json  server.js
stacks/dotnet/: .dockerignore  Dockerfile  Program.cs  dotnet.csproj
stacks/express/: .dockerignore  Dockerfile  package.json  server.js
stacks/fastify/: .dockerignore  Dockerfile  package.json  server.js
stacks/go/: .dockerignore  Dockerfile  go.mod  main.go
stacks/java/: .dockerignore  Dockerfile  pom.xml
stacks/java/src/main/java/com/race/: ApiController.java  RaceApplication.java
stacks/java/src/main/resources/: application.properties
stacks/nest/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
stacks/nest/src/: app.controller.ts  app.module.ts  db.service.ts  main.ts
stacks/python/: .dockerignore  Dockerfile  main.py  requirements.txt
stacks/rust/: .dockerignore  Cargo.toml  Dockerfile
stacks/rust/src/: main.rs
